--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,12 +1,14 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
 @import url('https://fonts.googleapis.com/css2?family=Gabarito:wght@400;500;600;700;800;900&display=swap');
 
 * {
+    font-family: 'Gabarito', cursive;
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
     scroll-behavior: smooth;
-}
-
-html {
-    font-family: 'Gabarito', 'Cairo', cursive;
 }
