--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,54 +27,28 @@
 }
 
 
-.animate-spin-slow {
-    animation: spin 3s linear infinite;
-}
-
-@keyframes spin {
-    0% {
-        transform: rotateX(0) rotateY(0);
-    }
-
-    100% {
-        transform: rotateX(360deg) rotateY(360deg);
-    }
-}
-
-.cube {
+.loadingContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100%;
-    height: 100%;
-    position: relative;
-    transform-style: preserve-3d;
+    height: 75vh;
+}
+.loader {
+    width: fit-content;
+    font-weight: bold;
+    font-family: monospace;
+    font-size: 30px;
+    clip-path: inset(0 3ch 0 0);
+    animation: l4 1s steps(4) infinite;
 }
 
-.face {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    border: 2px solid rgba(255, 255, 255, 0.2);
+.loader:before {
+    content: "Loading..."
 }
 
-.front {
-    transform: translateZ(40px);
-}
-
-.back {
-    transform: rotateY(180deg) translateZ(40px);
-}
-
-.right {
-    transform: rotateY(90deg) translateZ(40px);
-}
-
-.left {
-    transform: rotateY(-90deg) translateZ(40px);
-}
-
-.top {
-    transform: rotateX(90deg) translateZ(40px);
-}
-
-.bottom {
-    transform: rotateX(-90deg) translateZ(40px);
+@keyframes l4 {
+    to {
+        clip-path: inset(0 -1ch 0 0)
+    }
 }
